# python-web_hw_04

./: Dockerfile  README.md  main.py  pyproject.toml
storage/: data.json
